--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanem/react-nprogress": "^5.0.50",
     "@tanstack/react-query": "^4.35.0",
     "@tanstack/react-query-devtools": "^4.35.0",
     "@tanstack/react-table": "^8.9.8",
@@ -31,6 +35,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "i": "^0.3.7",
     "lucide-react": "^0.276.0",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
