--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
