--- a/package.json
+++ b/package.json
@@ -22,20 +22,25 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@react-hookz/web": "^23.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanem/react-nprogress": "^5.0.50",
     "@tanstack/react-query": "^4.35.0",
     "@tanstack/react-query-devtools": "^4.35.0",
     "@tanstack/react-table": "^8.9.8",
+    "@types/lodash": "^4.14.198",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "i": "^0.3.7",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.276.0",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
@@ -46,9 +51,11 @@
     "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.2.0"
   }
 }
