--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "apexcharts": "^3.42.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
@@ -48,6 +49,7 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
