--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
@@ -51,6 +52,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.2",
