--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@react-hookz/web": "^23.1.0",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanem/react-nprogress": "^5.0.50",
     "@tanstack/react-query": "^4.35.0",
@@ -48,6 +49,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.276.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -55,6 +57,7 @@
     "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-pdf-html": "^1.1.18",
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
