--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
-    "@mantine/hooks": "^6.0.20",
+    "@mantine/core": "^7.0.1",
+    "@mantine/dates": "^7.0.1",
+    "@mantine/hooks": "^7.0.1",
+    "@mantine/next": "^6.0.21",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -43,6 +46,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "i": "^0.3.7",
@@ -59,6 +63,7 @@
     "react-hook-form": "^7.46.1",
     "react-pdf-html": "^1.1.18",
     "react-redux": "^8.1.2",
+    "react-select": "^5.7.5",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^1.14.0",
