--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "yup": "^1.2.0"
+    "use-broadcast-ts": "^1.4.0",
+    "yup": "^1.2.0",
+    "zustand": "^4.4.3"
   }
 }
