--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit --incremental --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -40,6 +41,7 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-flatpickr": "^3.8.9",
     "apexcharts": "^3.42.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
@@ -62,7 +64,9 @@
     "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.46.1",
+    "react-intersection-observer": "^9.5.2",
     "react-pdf-html": "^1.1.18",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.5",
