--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@mantine/core": "^7.0.1",
     "@mantine/dates": "^7.0.1",
     "@mantine/hooks": "^7.0.1",
@@ -42,6 +43,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@types/react-flatpickr": "^3.8.9",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
     "apexcharts": "^3.42.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
@@ -52,6 +54,13 @@
     "dayjs": "^1.11.10",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "i": "^0.3.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.276.0",
@@ -59,6 +68,8 @@
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
