--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,5 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "prettier"
-    // "plugin:tailwindcss/recommended",
-    // "plugin:prettier/recommended"
-  ],
+  "extends": ["next/core-web-vitals", "prettier"],
   "parserOptions": {
     "project": "./tsconfig.json",
     "warnOnUnsupportedTypeScriptVersion": false
