--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tanstack/react-query-devtools": "^4.35.0",
     "@tanstack/react-table": "^8.9.8",
     "@types/lodash": "^4.14.198",
+    "@types/luxon": "^3.3.3",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -64,6 +65,7 @@
     "i": "^0.3.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.276.0",
+    "luxon": "^3.4.3",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
