--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-pdf-html": "^1.1.18",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.18.0",
     "react-select": "^5.7.5",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
