--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^7.0.1",
     "@mantine/next": "^6.0.21",
     "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
