--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -67,8 +67,8 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.276.0",
     "luxon": "^3.4.3",
-    "next": "13.4.19",
-    "next-auth": "^4.23.1",
+    "next": "^14.0.3",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "prettier": "^3.0.3",
