--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "setup:onboarding:env": "node src/scripts/setup-env.files.js",
+    "setup:onboarding": "npm install && npm run setup:onboarding:env",
     "typecheck": "tsc --noEmit --incremental --watch"
   },
   "dependencies": {
@@ -16,6 +18,8 @@
     "@mantine/dates": "^7.0.1",
     "@mantine/hooks": "^7.0.1",
     "@mantine/next": "^6.0.21",
+    "@novu/node": "^0.21.0",
+    "@novu/notification-center": "^0.21.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -73,6 +77,7 @@
     "postcss": "8.4.29",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -92,7 +97,11 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "use-broadcast-ts": "^1.4.0",
+    "uuid": "^9.0.1",
     "yup": "^1.2.0",
     "zustand": "^4.4.3"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.7"
   }
 }
